fixed too large content-wrapper

--- a/src/app/page-layout/main-nav/main-nav.component.scss
+++ b/src/app/page-layout/main-nav/main-nav.component.scss
@@ -125,6 +125,7 @@
   justify-content: center;
   color: $light-color;
   height: 85%;
+  overflow-y: auto;
 
   .content-area {
     padding: $margin-huge;
